# configma

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: config.rs  entry.rs  main.rs  module.rs  profile.rs
