[package]
name = "configma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
derivative = "2.2.0"
dirs = "5.0.1"
serde = { version = "1.0.174", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.7.6"
walkdir = "2.3.3"
